# HuffmanCompressor

./: CMakeLists.txt  README.md
include/: bitReader.hpp  bitWriter.hpp  fileIO.hpp  huffman.hpp
src/: huffman.cpp  main.cpp
